--- a/pom.xml
+++ b/pom.xml
@@ -2,18 +2,30 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ontoeval</groupId>
-  <artifactId>EvaluationOntologiesApp</artifactId>
+  <artifactId>EvaluationOntologies</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>DrOntoEval</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>6.0.3</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>DrOntoEval</finalName>
