--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,17 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>6.0.3</version>
     </dependency>
+    <dependency>
+      <groupId>com.j256.ormlite</groupId>
+      <artifactId>ormlite-core</artifactId>
+      <version>4.23</version>
+    </dependency>
+    <dependency>
+      <groupId>com.j256.ormlite</groupId>
+      <artifactId>ormlite-jdbc</artifactId>
+      <version>4.48</version>
+    </dependency>
+
 
   </dependencies>
   <build>
