--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
       <version>5.1.39</version>
     </dependency>
     <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+    <dependency>
       <groupId>com.j256.ormlite</groupId>
       <artifactId>ormlite-core</artifactId>
       <version>4.48</version>
@@ -35,7 +40,6 @@
       <artifactId>ormlite-jdbc</artifactId>
       <version>4.48</version>
     </dependency>
-
 
   </dependencies>
   <build>
