--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
       <version>1.2</version>
     </dependency>
     <dependency>
+      <groupId>org.jasypt</groupId>
+      <artifactId>jasypt</artifactId>
+      <version>1.9.2</version>
+    </dependency>
+    <dependency>
       <groupId>com.j256.ormlite</groupId>
       <artifactId>ormlite-core</artifactId>
       <version>4.48</version>
