--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,39 @@
       <version>4.48</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.12</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-server</artifactId>
+      <version>8.1.9.v20130131</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-servlets</artifactId>
+      <version>8.1.9.v20130131</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-webapp</artifactId>
+      <version>8.1.9.v20130131</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-util</artifactId>
+      <version>8.1.9.v20130131</version>
+      <scope>test</scope>
+    </dependency>
+
+
   </dependencies>
   <build>
     <finalName>DrOntoEval</finalName>
@@ -58,11 +91,68 @@
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
+              <version>3.3</version>
               <configuration>
                   <source>1.7</source>
                   <target>1.7</target>
               </configuration>
           </plugin>
+
+
+        <!-- Docker Plugin -->
+        <plugin>
+          <groupId>com.spotify</groupId>
+          <artifactId>docker-maven-plugin</artifactId>
+          <version>0.4.11</version><!--0.2.3-->
+          <configuration>
+            <imageName>dchaves/${project.name}</imageName>
+            <serverId>dockerhub</serverId>
+            <dockerDirectory>src/main/docker</dockerDirectory>
+            <resources>
+              <resource>
+                <targetPath>/</targetPath>
+                <directory>${project.build.directory}</directory>
+                <include>${project.build.finalName}.war</include>
+              </resource>
+            </resources>
+            <forceTags>true</forceTags>
+            <imageTags>
+              <imageTag>${project.version}</imageTag>
+              <imageTag>latest</imageTag>
+            </imageTags>
+          </configuration>
+        </plugin>
+
+
+        <!-- allows running this example with mvn jetty:run -->
+        <plugin>
+          <groupId>org.eclipse.jetty</groupId>
+          <artifactId>jetty-maven-plugin</artifactId>
+          <version>9.3.4.RC1</version>
+          <configuration>
+            <scanIntervalSeconds>10</scanIntervalSeconds>
+            <webApp>
+              <contextPath>/eval</contextPath>
+            </webApp>
+            <useTestScope>true</useTestScope>
+            <systemProperties>
+              <systemProperty>
+                <name>EVAL_USER</name>
+                <value>root</value>
+              </systemProperty>
+              <systemProperty>
+                <name>EVAL_PWD</name>
+                <value>david</value>
+              </systemProperty>
+              <systemProperty>
+                <name>EVAL_DB</name>
+                <value>localhost</value>
+              </systemProperty>
+            </systemProperties>
+          </configuration>
+        </plugin>
+
+
       </plugins>
   </build>
 </project>
