--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,40 +43,40 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>LoadFile</servlet-name>
-        <url-pattern>LoadFile</url-pattern>
+        <url-pattern>/LoadFile</url-pattern>
     </servlet-mapping>
       <servlet-mapping>
         <servlet-name>Login</servlet-name>
-        <url-pattern>Login</url-pattern>
+        <url-pattern>/Login</url-pattern>
       </servlet-mapping>
       <servlet-mapping>
         <servlet-name>LoadOntology</servlet-name>
-        <url-pattern>LoadOntology</url-pattern>
+        <url-pattern>/LoadOntology</url-pattern>
       </servlet-mapping>
       <servlet-mapping>
         <servlet-name>LoadFeatures</servlet-name>
-        <url-pattern>LoadFeatures</url-pattern>
+        <url-pattern>/LoadFeatures</url-pattern>
       </servlet-mapping>
     <servlet-mapping>
         <servlet-name>EvaluatedTerms</servlet-name>
-        <url-pattern>EvaluatedTerms</url-pattern>
+        <url-pattern>/EvaluatedTerms</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>EvaluatedRelations</servlet-name>
-        <url-pattern>EvaluatedRelations</url-pattern>
+        <url-pattern>/EvaluatedRelations</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>LoadAdmin</servlet-name>
-        <url-pattern>LoadAdmin</url-pattern>
+        <url-pattern>/LoadAdmin</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>ChangeRelevance</servlet-name>
-        <url-pattern>ChangeRelevance</url-pattern>
+        <url-pattern>/ChangeRelevance</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>LoadInstructions</servlet-name>
-        <url-pattern>LoadInstructions</url-pattern>
+        <url-pattern>/LoadInstructions</url-pattern>
     </servlet-mapping>
 </web-app>
