--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
    expose: ["3306"]
  drontoeval:
    container_name: onto-eval
-   image: dchaves/onto-eval:latest
+   image: dchaves1/onto-eval:latest
    restart: always
    env_file: ./environment.properties
    ports: ["8888:8080"]
