--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
           <artifactId>docker-maven-plugin</artifactId>
           <version>0.4.11</version><!--0.2.3-->
           <configuration>
-            <imageName>dchaves/onto-eval</imageName>
+            <imageName>dchaves1/onto-eval</imageName>
             <serverId>dockerhub</serverId>
             <dockerDirectory>src/main/docker</dockerDirectory>
             <resources>
